--- a/contact_us.html
+++ b/contact_us.html
@@ -12,6 +12,15 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@600&display=swap" rel="stylesheet">
+
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 
@@ -48,7 +57,48 @@
         </nav>
     </div>
 
+    <section class="banner">
+        <div class="mv-banner">
+            <img src="assets/images/frank-mckenna-OD9EOzfSOh0-unsplash.jpg">
+        </div>
+        <div class="mv-banner-header">
+            <h1>Contact</h1>
+            <h4>let's meet together</h4>
+        </div>
 
+    </section>
+
+    <section class="mv-contact-us">
+        <div class="container">
+            <div class="row contact-us-row">
+                <div class="col-lg-6 col-md-6 mv-contact-us-details">
+                    <div class="contact-us-details">
+                        <h2>Contact Us</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, rerum? Doloremque beatae eius ipsa error praesentium enim nulla possimus placeat illo suscipit aliquid, impedit qui hic corporis quae nesciunt veritatis?</p>
+
+                        <div class="col-2 ">
+                            <i class="fa fa-envelope" style="color:#a1d7d2 ;"></i>
+                        </div>
+                        <div class="col-2 ">
+                            <i class="fa fa-map-marker" style="color:#a1d7d2 ;"></i>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa fa-phone" style="color:#a1d7d2 ;"></i>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa fa-phone-square" style="color:#a1d7d2 ;"></i>
+                        </div>
+
+                    </div>
+                </div>
+                <div class=" col-lg-6 ">
+                    <div class="contact-us-details col-md-6 ">
+                        <h2>Contact Us</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
